--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.16",
+    "node-sass": "^9.0.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
   }
