--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +14,8 @@
     "react-icons": "^4.12.0",
     "react-quill": "^2.0.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +46,7 @@
     "autoprefixer": "^10.4.16",
     "node-sass": "^9.0.0",
     "postcss": "^8.4.32",
+    "redux-thunk": "^3.1.0",
     "tailwindcss": "^3.3.6"
   }
 }
