--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
+    "react-diff-view": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-quill": "^2.0.0",
@@ -48,5 +50,6 @@
     "postcss": "^8.4.32",
     "redux-thunk": "^3.1.0",
     "tailwindcss": "^3.3.6"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
