--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "diff": "^5.1.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.2"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
