display changes in original

--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "codemirror": "^6.0.1",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
+    "react-codemirror": "^1.0.0",
+    "react-codemirror2": "^7.3.0",
     "react-diff-view": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
